# Sonar_Mine_Detection

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  requirements.txt  streamlit_app.py
data/: README.md  sonar.csv
docs/: project-report.md
f76f9c06-a20c-4af6-a472-87ead246da28/: canvas.yaml
f76f9c06-a20c-4af6-a472-87ead246da28/Data Analyst Project Assignment/: Chart 1 – Energy Profiles.py  Chart 11 – Tuning Results.py  Chart 17 – Cluster Elbow & Silhouette.py  Chart 19 – Cluster Mean Energy Profiles.py  Chart 4 – PCA Scatter.py  Chart 5 – Model Performance.py  Chart 6 – Feature Importance.py  Chart 7 – Confusion Matrix.py  Chart 8 – Precision, Recall & F1 per Class.py  Data Cleaning.py  ML Model – Random Forest Classifier.py  Model Comparison – RF vs Extra Trees vs XGBoost vs Neural Net.py  Unzip & Explore.py  Why This Matters – Real-World Context.md  layer.yaml
src/: 03_data_profiling.py  04_exploratory_analysis.py  07_extra_trees_tuning.py  08_clustering_kmeans.py  09_model_export.py
src/charts/: Chart_10_ROC_Curves_All_Models.py  Chart_13_Permutation_Feature_Importance.py  Chart_14_Individual_Prediction_Breakdown.py  Chart_15_Synthetic_Sonar_Sample_Test.py  Chart_18_Cluster_PCA_Scatter.py  Chart_2_Top_Discriminating_Bands.py  Chart_3_Class_Distribution_Band_Variance.py  Chart_9_Model_Comparison.py
src/sonar_detection/: __init__.py  data.py  evaluation.py  models.py  pipeline.py  (+1 more)
tests/: conftest.py  test_data.py  test_evaluation.py  test_models.py  test_pipeline.py  test_preprocessing.py
